crates/toml_edit/tests/snapshots/invalid/control/comment-ff.stderr
TOML parse error at line 1, column 27
  |
1 | comment-ff   = "0x7f"   # 
  |                           ^
invalid comment character, expected printable characters
